# uro-dreamwatcher

./: pyproject.toml  requirements.txt  settings.env.example  state.json
.github/workflows/: dreamwatcher.yml
.snapshots/: snapshots.json
dreamwatcher/: api.py  discord.py  emoji.py  main.py  notifier.py  rss.py  snapshot.py  state.py  types.py  watcher.py  wiki.py
tests/: test_diff_normalize.py  test_snapshot_sequence_match.py
